<resources>
    <string name="a">Google Play Store</string>
    <string name="b">Google Play</string>
    <string name="c">Approval required</string>
    <string name="d">Parental controls</string>
    <string name="e">Reviews</string>
    <string name="f">Instant app</string>
    <string name="g">Member settings</string>
    <string name="h">Instant Apps preferences</string>
    <string name="i">Play Store</string>
    <string name="j">Leaks</string>
    <string name="k">Storage permission</string>
    <string name="l">Play Protect</string>
    <string name="m">My apps</string>
    <string name="n">Purchase options</string>
    <string name="o">Payment methods</string>
    <string name="p">Allows the user to view available apps from within this app.</string>
    <string name="q">Access the Google Play App Discovery Service</string>
    <string name="r">Allows the user to purchase items through Google Play from within this app.</string>
    <string name="s">Google Play billing service</string>
    <string name="t">Can check if you have a license for this app from Google Play.</string>
    <string name="u">Google Play license check</string>
    <string name="v">App permissions</string>
    <string name="w">Open source licenses</string>
    <string name="x">Require authentication</string>
    <string name="y">Redeem your code</string>
    <string name="aa">Rate it!</string>
    <string name="ba">Send gift</string>
    <string name="ca">Settings</string>
    <string name="da">Notifications</string>
    <string name="ea">Complete account setup</string>
    <string name="fa">Apps will be installed after setup is complete</string>
    <string name="ga">Review additional apps</string>
    <string name="allow_auto_updating">Auto-update</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add icon to Home screen</string>
    <string name="auto_update_available_notification">App updates available</string>
    <string name="auto_update_available_notification_summary">Notify when app updates are available</string>
    <string name="auto_update_completion_notification">Apps were auto-updated</string>
    <string name="auto_update_completion_notification_summary">Notify when apps are automatically updated</string>
    <string name="auto_update_label">Auto-update apps</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download_now">Cancel</string>
    <string name="certification_status_label">Device certification</string>
    <string name="clear_local_history_summary">Remove searches you have performed from this device</string>
    <string name="clear_local_history_title">Clear local search history</string>
    <string name="clear_tos_preferences_summary">Clear the locally stored TOS acceptances.</string>
    <string name="clear_tos_preferences_title">Clear TOS preferences.</string>
    <string name="content_filtering_description">Set filters to restrict apps that can be downloaded</string>
    <string name="content_filtering_label">Parental controls</string>
    <string name="debug_cache_and_sync_pref_title">Show Cache And Sync Info</string>
    <string name="debug_carrier_override_summary">Set the carrier override</string>
    <string name="debug_carrier_override_title">Carrier override</string>
    <string name="debug_clear_cache_summary">Clear cache and restart</string>
    <string name="debug_clear_cache_title">Clear cache and quit</string>
    <string name="debug_environment_action_bar_title">Environment indicator</string>
    <string name="debug_environments_summary">Change your backend environment</string>
    <string name="debug_environments_title">Environment</string>
    <string name="debug_export_library_summary">Export the library and asset store databases to external storage</string>
    <string name="debug_export_library_title">Export library databases</string>
    <string name="debug_gms_core_details">GmsCore Details</string>
    <string name="debug_gms_core_details_summary">Deep Link into GmsCore details page</string>
    <string name="debug_image_debugging_summary">Display size of downloaded images</string>
    <string name="debug_image_debugging_title">Toggle image debugging</string>
    <string name="debug_instant_apps">Instant Apps</string>
    <string name="debug_instant_apps_summary">Install Instant Apps Supervisor</string>
    <string name="debug_locale_override_summary">Set the locale override</string>
    <string name="debug_locale_override_title">Locale override</string>
    <string name="debug_override_server_experiments_summary">Choose which server experiments to override</string>
    <string name="debug_override_server_experiments_title">Override server side experiments</string>
    <string name="debug_play_country_override_summary">Set the Play Country override</string>
    <string name="debug_play_country_override_title">Play Country override</string>
    <string name="debug_reset_all_summary">Reset all debug options</string>
    <string name="debug_reset_all_title">Reset all</string>
    <string name="debug_run_daily_hygiene">Run Daily Hygiene</string>
    <string name="debug_run_daily_hygiene_summary">Immediately trigger Daily Hygiene</string>
    <string name="debug_run_instant_apps_hygiene_summary">Immediately trigger Instant Apps Hygiene service</string>
    <string name="debug_run_instant_apps_hygiene_title">Run Instant Apps Hygiene</string>
    <string name="debug_skip_all_caches">Skip all caches</string>
    <string name="debug_skip_all_caches_off">Caches will not be skipped</string>
    <string name="debug_skip_all_caches_on">Caches will be skipped</string>
    <string name="debug_trigger_cache_and_sync_title">Trigger Cache And Sync</string>
    <string name="debug_upload_device_config_summary">Force re-upload of device configuration</string>
    <string name="debug_upload_device_config_title">Upload device config</string>
    <string name="debug_volley_logging_off">Verbose logging is disabled</string>
    <string name="debug_volley_logging_on">Verbose logging is enabled</string>
    <string name="debug_volley_logging_title">Volley logging state</string>
    <string name="disable_personalization">Disable personalization</string>
    <string name="download">Download</string>
    <string name="download_network_remember_preference">Remember preference</string>
    <string name="download_network_remember_preference_subtext">To change this later, go to Play Store &lt;font color=#4285F4&gt;Settings&lt;/font&gt;</string>
    <string name="download_now">Download Now</string>
    <string name="download_now_radio_button">Now (over any network)</string>
    <string name="download_settings_label">Download apps</string>
    <string name="download_settings_value_download_always_subtext">Data charges may apply.</string>
    <string name="dump_family_status_summary">Dump family status to logcat.</string>
    <string name="dump_family_status_title">Dump family status</string>
    <string name="dump_library_state_summary">Dumps library state to logcat</string>
    <string name="dump_library_state_title">Dump library state</string>
    <string name="fake_item_rater_off">Fake item rater is disabled</string>
    <string name="fake_item_rater_on">Fake item rater is enabled</string>
    <string name="fake_item_rater_title">Fake item rater</string>
    <string name="fingerprint_auth_settings_description">For Google Play purchases on this device</string>
    <string name="fingerprint_auth_settings_label">Fingerprint authentication</string>
    <string name="flush_eventlog_summary">Immediately flush the event log</string>
    <string name="flush_eventlog_title">Flush Eventlog</string>
    <string name="force_dapper_trace_off">Dapper trace disabled</string>
    <string name="force_dapper_trace_on">Dapper trace enabled</string>
    <string name="force_dapper_trace_title">Force dapper trace</string>
    <string name="force_network_type_summary">Select your network type (2G/3G/4G/WIFI)</string>
    <string name="force_network_type_title">Network type override</string>
    <string name="force_refresh_user_settings_summary">Force refresh of current user\'s settings</string>
    <string name="force_refresh_user_settings_title">Refresh user settings</string>
    <string name="from_name_hint_short">Your name</string>
    <string name="from_name_output">From: %1$s</string>
    <string name="gift_send_to_another">If the recipient does not want this gift, you can send it to someone else.</string>
    <string name="instant_apps_play_store_settings_description">Manage Android Instant Apps on this device</string>
    <string name="instant_apps_play_store_settings_label">Use apps without installation</string>
    <string name="launcher_icon_counter_setting_description">For important notifications from Google Play Store</string>
    <string name="launcher_icon_counter_setting_title">Show badge on app icon</string>
    <string name="news_offers_summary">Stay up to date with news and offers from Google Play</string>
    <string name="news_offers_title">Receive news and offers</string>
    <string name="offpeak_or_wifi_radio_button">Later, on Wi-Fi or %s*</string>
    <string name="open">Open</string>
    <string name="os_licenses_label">Open source licenses</string>
    <string name="os_licenses_summary">License details for open source software</string>
    <string name="personalization_disabled">Personalization disabled</string>
    <string name="personalization_enabled">Personalization enabled</string>
    <string name="purchase_auth_settings_label">Require authentication for purchases</string>
    <string name="purchase_auth_underage_disclaimer">Authentication is always required for purchases through Google Play within apps designated for ages 12 and under.</string>
    <string name="purchase_auth_value_always">For all purchases through Google Play on this device</string>
    <string name="purchase_auth_value_never">Never</string>
    <string name="purchase_auth_value_session">Every 30 minutes</string>
    <string name="sample">Free sample</string>
    <string name="schedule_debug_jobs">Schedule Debug Jobs</string>
    <string name="schedule_debug_jobs_summary">Manage Debug Phonesky Scheduler Jobs</string>
    <string name="search_hint">Search Google Play</string>
    <string name="send_gift">Send gift</string>
    <string name="settings_about_header">About</string>
    <string name="settings_build_version">Play Store version</string>
    <string name="settings_general_section_header">General</string>
    <string name="settings_notifications_section_header">Notifications</string>
    <string name="settings_notifications_section_summary">Manage notification settings</string>
    <string name="settings_user_controls_section_header">User controls</string>
    <string name="share">Share</string>
    <string name="show_staging_data_off">Prod data currently shown</string>
    <string name="show_staging_data_on">Staging data currently shown</string>
    <string name="show_staging_data_title">Show staging promo data</string>
    <string name="to_email_hint_short">Recipient email address</string>
    <string name="to_email_output">To: %1$s</string>
    <string name="uninstall">Uninstall</string>
    <string name="update">Update</string>
    <string name="verify_parent_settings_description">Notify me if other sources attempt to update apps</string>
    <string name="verify_parent_settings_label">Protect my updates</string>
    <string name="wait_for_wifi_not_supported_p1">Google Play no longer supports the ability to download apps only when Wi-Fi is available.\n</string>
    <string name="wait_for_wifi_not_supported_p2">What does this mean?</string>
    <string name="wait_for_wifi_not_supported_p3">Apps you wish to install will now download over any network. Data charges may apply.</string>
    <string name="wait_for_wifi_radio_button">When Wi-Fi is available</string>
</resources>