<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res-auto">
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/instant_app_launch_button" finsky:visibility="gone" finsky:action_style="2" finsky:local_priority="8" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/cancel_download_button" finsky:visibility="gone" finsky:text="@string/cancel_download_now" finsky:action_style="2" finsky:local_priority="7" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/download_now_button" finsky:visibility="gone" finsky:text="@string/download_now" finsky:action_style="2" finsky:local_priority="6" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/download_button" finsky:visibility="gone" finsky:text="@string/download" finsky:action_style="2" finsky:local_priority="5" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/uninstall_button" finsky:visibility="gone" finsky:text="@string/uninstall" finsky:action_style="2" finsky:local_priority="4" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/update_button" finsky:visibility="gone" finsky:text="@string/update" finsky:action_style="2" finsky:local_priority="3" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/launch_button" finsky:visibility="gone" finsky:text="@string/open" finsky:action_style="2" finsky:local_priority="2" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/try_button" finsky:visibility="gone" finsky:text="@string/sample" finsky:action_style="2" finsky:local_priority="1" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/preregister_button" finsky:visibility="gone" finsky:action_style="0" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/buy_button2" finsky:visibility="gone" finsky:action_style="0" finsky:local_priority="0" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/buy_button" finsky:visibility="gone" finsky:action_style="0" finsky:local_priority="0" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.actionbuttons.layout.WishlistPlayActionButton finsky:id="@id/wishlist_action_button" finsky:visibility="gone" finsky:action_style="0" finsky:local_priority="0" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.finsky.frameworkviews.PlayActionButtonV2 finsky:id="@id/subscribe_button" finsky:visibility="gone" finsky:text="@string/download" finsky:action_style="0" finsky:local_priority="-1" style="@style/Play_DetailsPage_ActionButton" />
</merge>
