<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@id/installation_size" android:paddingLeft="10dp" android:paddingRight="0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" />
    <RadioGroup android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
        <RadioButton android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/wait_for_wifi" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="12dp" android:text="@string/wait_for_wifi_radio_button" />
        <RadioButton android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/offpeak_or_wifi" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="1dp" android:text="@string/offpeak_or_wifi_radio_button" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@id/offpeak_or_wifi_subtext" android:paddingLeft="33dp" android:paddingRight="0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="12dp" />
        <RadioButton android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/download_now" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="12dp" android:text="@string/download_now_radio_button" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@id/download_now_subtext" android:paddingLeft="33dp" android:paddingRight="0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="12dp" android:text="@string/download_settings_value_download_always_subtext" />
    </RadioGroup>
    <View android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@c6071d/pe__translucent_status_bar_color" android:focusable="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" android:layout_marginBottom="12dp" />
    <CheckBox android:textSize="@dimen/content_generic_medium_size" android:textColor="@color/play_primary_text" android:id="@id/download_remember_preference" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="1dp" android:text="@string/download_network_remember_preference" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@id/download_remember_preference_subtext" android:paddingLeft="33dp" android:paddingRight="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/download_network_remember_preference_subtext" />
</LinearLayout>
